<resources>
    <string name="hello">Hello</string>
    <string name="app_name">Funtestic</string>
    <string name="number_of_question_1">Question 1</string>
    <string name="number_of_question_2">Question 2</string>
    <string name="number_of_question_3">Question 3</string>
    <string name="number_of_question_4">Question 4</string>
    <string name="number_of_question_5">Question 5</string>
    <string name="number_of_question_6">Question 6</string>
    <string name="number_of_question_7">Question 7</string>
    <string name="number_of_question_8">Question 8</string>
    <string name="number_of_question_9">Question 9</string>
    <string name="number_of_question_10">Question 10</string>
    <string name="number_of_question_11">Question 11</string>
    <string name="number_of_question_12">Question 12</string>
    <string name="number_of_question_13">Question 13</string>
    <string name="question_1">Does your child experience difficulties understanding how people around him feel during a conversation?</string>
    <string name="question_2">Does your child have trouble working in a group?</string>
    <string name="question_3">Does your child have difficulties making social connections with other kids?</string>
    <string name="question_4">Does your child get anxious, intolerant or block his ears when hearing loud noises? (for example people speaking out loud)</string>
    <string name="question_5">Does your child get angry when his day routine unexpectedly change?</string>
    <string name="question_6">Does your child talk slow and give irrelevant answers to question?</string>
    <string name="question_7">Does your child avoid making eye contact or not respond when being called?</string>
    <string name="question_8">Does your child not playing pretend games with other kids?</string>
    <string name="question_9">Does your child have obsessive habits?</string>
    <string name="question_10">Is your child overly sensitive to scents,tastes or touch?</string>
    <string name="question_11">Does your child avoid being physically touched?</string>
    <string name="question_12">Does your child have low awareness to risky situations?</string>
    <string name="question_13">Does your child behave in an impolite manner?</string>
    <string name="answer_1">Never</string>
    <string name="answer_2">Rarely</string>
    <string name="answer_3">Sometimes</string>
    <string name="answer_4">Often</string>
    <string name="answer_5">Very often</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="end_quiz">Finish and send</string>
    <string name="name_text">Name:</string>
    <string name="ID_text">ID:</string>
    <string name="age_text">Age:</string>
    <string name="gender_text">Gender:</string>
    <string name="child_details_text">Child details:</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Enter child name here</string>
    <string name="enter_id">Enter ID here</string>
    <string name="enter_age">Enter child age here</string>
    <string name="add_child">Add new child</string>
    <string name="select_child">Select child</string>
    <string name="enter_password">Enter password</string>
    <string name="password_too_short">Password is too short</string>
    <string name="enter_email">Please enter email</string>
    <string name="email_not_valid">Email is invalid</string>
    <string name="phone_not_valid">Phone number is invalid</string>
    <string name="please_enter_phone">Please enter phone number</string>
    <string name="checking_user_details">Checking user details, please wait...</string>
    <string name="enter_username">Please enter username</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="sign_up_here">Dont have a user yet? Register here</string>
    <string name="disclaimer">This app (“Funtestic)” provides only information, is not medical or treatment advice and may not be treated as such by the user. As such, this App may not be relied upon for the purposes of medical diagnosis or as a recommendation for medical care or treatment. The information on this App is not a substitute for professional medical advice, diagnosis or treatment. All content, including text, graphics, images and information, contained on or available through this App is for general information purposes only</string>
    <string name="creating_account">Creating an account..</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="create_account">Create an account</string>
    <string name="already_a_member_login">Already have an account? Sign here!</string>
    <string name="enter_first_name">Please insert first name</string>
    <string name="enter_last_name">Please insert last name</string>
    <string name="go_to_quiz">Move to quiz</string>
    <string name="must_select_category">You must choose category</string>
    <string name="no_selected_child">Please choose child first</string>
    <string name="bad_username_password">Username or password invalid, please try again</string>
    <string name="please_wait">Creating a new user, please wait...</string>
    <string name="login_failed">Login attempt failed</string>

    <string-array name="genderList">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <string-array name="category_array">
        <item>Communication with surroundings</item>
    </string-array>
    <string name="title_activity_game">GameActivity</string>
</resources>