<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.quiz.Question1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/appbackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_question_1"
            android:textSize="23sp"
            android:textColor="#000000"
            android:layout_marginBottom="30dp"
            android:id="@+id/Question1_text"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColor="#000000"
            android:text="@string/question_1"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:id="@+id/question1"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio1">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/answer_1"
                android:background="@android:color/background_light"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/question1_choice1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/answer_2"
                android:background="@android:color/background_light"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/question1_choice2"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/answer_3"
                android:background="@android:color/background_light"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/question1_choice3"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/answer_4"
                android:background="@android:color/background_light"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/question1_choice4"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/answer_5"
                android:background="@android:color/background_light"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/question1_choice5"/>

        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="101dp"
                android:layout_height="42dp"
                android:background="@mipmap/button1"
                android:layout_alignParentRight="true"
                android:text="@string/next"
                android:id="@+id/next1"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>