<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="72dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:src="@drawable/logo"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <EditText android:id="@+id/input_id_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_id" />

        <!--  Name Label -->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!---->
        <!--</android.support.design.widget.TextInputLayout>-->

        <EditText android:id="@+id/input_name_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/enter_full_name" />

        <!-- Email Label -->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!---->
        <!--</android.support.design.widget.TextInputLayout>-->

        <EditText android:id="@+id/input_email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email" />

        <!-- Password Label -->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <!---->
        <!--</android.support.design.widget.TextInputLayout>-->

        <EditText android:id="@+id/input_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"/>

        <!-- SignUp Button -->
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btn_signUp"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:padding="12dp"-->
            <!--android:text="Create Account"/>-->

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"/>

        <TextView android:id="@+id/link_login_sign_up_activity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>